// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Progress /> Progress with multiple props matches with snapshot 1`] = `
.c0 {
  max-width: 100%;
}

.c0 .k-Meters-Progress__ramp {
  position: relative;
  height: 0.125rem;
  background: var(--color-grey-300,#eee);
  border-radius: var(--border-radius-xs);
}

.c0 .k-Meters-Progress__ramp::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  max-width: var(--progress-value);
  -webkit-transition: max-width 1s cubic-bezier(0,0.5,0.3,1);
  transition: max-width 1s cubic-bezier(0,0.5,0.3,1);
  border-radius: var(--border-radius-xs);
  background: var(--progress-color);
}

.c0.k-Meters-Progress--disabled .k-Meters-Progress__ramp::after,
.c0.is-disabled .k-Meters-Progress__ramp::after {
  background: var(--color-grey-400,#d8d8d8);
}

<div
  aria-valuemax={100}
  aria-valuemin={0}
  aria-valuenow={50}
  className="c0 k-Meters-Progress"
  role="progressbar"
  style={
    Object {
      "--progress-color": "var(--color-primary-500, #1f93ff)",
      "--progress-value": "50%",
    }
  }
>
  <div
    className="k-Meters-Progress__ramp"
    style={
      Object {
        "height": 6,
      }
    }
  />
</div>
`;

exports[`<Progress /> simple Progress  matches with snapshot 1`] = `
.c0 {
  max-width: 100%;
}

.c0 .k-Meters-Progress__ramp {
  position: relative;
  height: 0.125rem;
  background: var(--color-grey-300,#eee);
  border-radius: var(--border-radius-xs);
}

.c0 .k-Meters-Progress__ramp::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  max-width: var(--progress-value);
  -webkit-transition: max-width 1s cubic-bezier(0,0.5,0.3,1);
  transition: max-width 1s cubic-bezier(0,0.5,0.3,1);
  border-radius: var(--border-radius-xs);
  background: var(--progress-color);
}

.c0.k-Meters-Progress--disabled .k-Meters-Progress__ramp::after,
.c0.is-disabled .k-Meters-Progress__ramp::after {
  background: var(--color-grey-400,#d8d8d8);
}

<div
  aria-valuemax={100}
  aria-valuemin={0}
  aria-valuenow={0}
  className="c0 k-Meters-Progress"
  role="progressbar"
  style={
    Object {
      "--progress-color": "var(--color-primary-500, #1f93ff)",
      "--progress-value": "0%",
    }
  }
>
  <div
    className="k-Meters-Progress__ramp"
  />
</div>
`;
